--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -8,9 +8,15 @@
   <title>Login</title>
 </head>
 <body>
-  {% include "layouts/navbar.html" %}
-  {% include "layouts/sidebar.html" %}
-  {% include "layouts/footer.html" %}
-  {% include "layouts/js_load.html" %}
+  <div class="wrapper">
+    {% include "layouts/navbar.html" %}
+    {% include "layouts/sidebar.html" %}
+  
+    <div class="content-wrapper">
+
+    </div>
+    {% include "layouts/footer.html" %}
+  </div>
+    {% include "layouts/js_load.html" %}
 </body>
 </html>
