--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  {% include "layouts/css_load.html" %}
-  <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
 </head>
 <body>
-  <div class="wrapper">
-    {% include "layouts/navbar.html" %}
-    {% include "layouts/sidebar.html" %}
-  
-    <div class="content-wrapper">
+    <form action="{{ url_for('login') }}" method="post">
+        <div class="msg">{{ msg }}</div>
+        <input type="text" name="username" id="username">
+        <input type="password" name="pass" id="pass">
+        <button type="submit">Login</button>
+    </form>
 
-    </div>
-    {% include "layouts/footer.html" %}
-  </div>
-    {% include "layouts/js_load.html" %}
+    {% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 </body>
 </html>
