--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -22,7 +22,7 @@
   <p class="login-box-msg">Sign in to start your session</p>
   <form action="{{ url_for('login') }}" method="post">
   <div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Email" name="usuario">
+  <input type="text" class="form-control" placeholder="Usuario" name="usuario">
   <div class="input-group-append">
   <div class="input-group-text">
   <span class="fas fa-envelope"></span>
@@ -30,7 +30,7 @@
   </div>
   </div>
   <div class="input-group mb-3">
-  <input type="password" class="form-control" placeholder="Password" name="contra">
+  <input type="password" class="form-control" placeholder="Clave" name="contra">
   <div class="input-group-append">
   <div class="input-group-text">
   <span class="fas fa-lock"></span>
