Updates: *se añadio archivo common para importaciones globales *se separaron logicas a archivos especificos e individuales *archivo db para la conexion a db *main redirecciona a los archivos especificos

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -20,7 +20,7 @@
   <div class="card">
   <div class="card-body login-card-body">
   <p class="login-box-msg">Sign in to start your session</p>
-  <form action="{{ url_for('login') }}" method="post">
+  <form action="{{ url_for('login_route') }}" method="post">
   <div class="input-group mb-3">
   <input type="text" class="form-control" placeholder="Usuario" name="usuario">
   <div class="input-group-append">
