--- a/templates/auth/index.html
+++ b/templates/auth/index.html
@@ -17,7 +17,7 @@
           Hola {{session.username}} <br></br> Welcome to menu
         </h1>
 
-        <a href="{{ url_for('logout') }}">Logout</a>
+        <a href="{{ url_for('logout_route') }}">Logout</a>
     </div>
     {% include "layouts/footer.html" %}
   </div>
