--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -1,9 +1,9 @@
 <-% include ('src.db') %>
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="#" class="brand-link">
+    <a href="{{ url_for('login_route') }}" class="brand-link">
       <img src="../../static/assets/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">AdminLTE 3</span>
+      <span class="brand-text font-weight-light">SysProd</span>
     </a>
     <!-- Sidebar -->
     <div class="sidebar">
